<resources>
    <string name="app_name">RecipesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_recipes">Food\nRecipes</string>
    <string name="chef">chef</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="lets_cooking">Lets Cooking</string>
    <string name="search_recipe">Search recipe</string>
    <string name="sorting">Sorting</string>
    <string name="view_all">View all</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="recipe_image">recipe image</string>
    <string name="hint">hint</string>
    <string name="new_text">New</string>
    <string name="saved_recype">Saved recype</string>
    <string name="search_saved_recype">Search saved recype</string>
    <string name="isSavedBtn">isSavedBtn</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="random">Random</string>
    <string name="choose_sorting">Choose sorting</string>
</resources>