<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home_screen.HomeFragment">

    <TextView
        android:id="@+id/homeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/lets_cooking"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/SearchBarRoundedStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:drawableTint="@color/search_icon_color"
            android:hint="@string/search_recipe"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/category"
            android:textFontWeight="700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vieAllTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/view_all"
            android:textFontWeight="500"
            android:textSize="14sp" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/categoryBtnGroup"
        android:checkedButton="@+id/trendingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <RadioButton
            android:id="@+id/trendingBtn"
            android:background="@drawable/category_btn_background"
            android:button="@null"
            android:textAlignment="center"
            android:textColor="@color/text_category_btn_color"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/trending"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary" />

        <RadioButton
            android:id="@+id/newBtn"
            android:background="@drawable/category_btn_background"
            android:button="@null"
            android:textAlignment="center"
            android:textColor="@color/text_category_btn_color"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            android:layout_weight="1"
            android:paddingVertical="0dp"
            android:text="@string/new_text"
            app:layout_constraintEnd_toStartOf="@+id/popularBtn"
            app:layout_constraintStart_toEndOf="@+id/trendingBtn"
            app:strokeColor="@color/primary" />

        <RadioButton
            android:id="@+id/popularBtn"
            android:background="@drawable/category_btn_background"
            android:button="@null"
            android:textAlignment="center"
            android:textColor="@color/text_category_btn_color"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/popular"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/primary" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recypeRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryBtnGroup"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>